fixed spacing issue near stop/single button

--- a/Software/waveview/src/css/sidebar/core/singleButton.css
+++ b/Software/waveview/src/css/sidebar/core/singleButton.css
@@ -1,6 +1,8 @@
 .SingleButton {
   display: flex;
+  flex-direction: column;
   position: relative;
+  top: -1vh;
   left: 8vw;
   width: 7vw;
   height: 2vh;
@@ -9,6 +11,12 @@
   z-index: 100;
   border: none;
   user-select: none;
+}
+
+.SingleButtonComponent {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: -1vh;
 }
 
 .SingleButtonText {
